assets/css/styles.css
@import url("https://fonts.googleapis.com/css2?family=Chivo:wght@400;700&display=swap");

html,
body {
	height: 100%;
}

/* Button container */
button {
	display: flex;
	padding: 8px 16px;
	background-color: #212121;
	color: #fff;
	border-radius: 4px;
	text-align: center;
	text-decoration: none;
	border: none;
	font-size: 16px;
	line-height: 24px;
	cursor: pointer;
	transition: background-color 0.3s ease;
	gap: 10px;
}
  
/* Button hover state */
button:hover {
	background-color: #424242;
}


body {
	margin: 0;
	display: flex;
	justify-content: center;
	align-items: center;

	font-family: "Chivo", sans-serif;
	color: #ffffff;
	background: linear-gradient(316deg, #3d91c1, #9ab0dd, #5783e1, #57e1b1);
    background-size: 800% 800%;

    -webkit-animation: AnimationName 24s ease infinite;
    -moz-animation: AnimationName 24s ease infinite;
    animation: AnimationName 24s ease infinite;
}

#gameboard {
	display: grid;
	grid-template-columns: repeat(10, 4vw);
	grid-template-rows: repeat(10, 4vw);
	background-image: url("/assets/img/floor.png");
	background-size: 50px;
	border-radius: 10px;
	border: 8px solid #4a4a4a;
}


@-webkit-keyframes AnimationName {
    0%{background-position:0% 43%}
    50%{background-position:100% 58%}
    100%{background-position:0% 43%}
}
@-moz-keyframes AnimationName {
    0%{background-position:0% 43%}
    50%{background-position:100% 58%}
    100%{background-position:0% 43%}
}
@keyframes AnimationName {
    0%{background-position:0% 43%}
    50%{background-position:100% 58%}
    100%{background-position:0% 43%}
}
#gameboard>div {
	height: 4vw;
	width: 4vw;

	background-repeat: no-repeat;
	background-size: cover;
}

.crate {
	background-image: url("/assets/img/crate.png");
}

.wall {
	background-image: url("/assets/img/wall2.png");
}

.target {
	background-image: url("/assets/img/target.png");
}

.good {
	background-image: url("/assets/img/good_crate.png");
}

/* Le fond quand y'a le modal */
.modal-background {
	display: none;
	position: fixed;
	align-items: center;
	justify-content: center;
	z-index: 1;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	overflow: hidden;
	background-color: rgba(0, 0, 0, 0.863);
}
 

.modal {
	font-family: "Chivo", sans-serif;
	background-color: #292929;
	padding: 10px;
	border: 1px solid #2d2d2d;
	border-radius: 20px;
	margin: 60px;
}

.modal-header {
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: space-between;
	padding-left: 30px;
	padding-right: 30px;
	padding-top: 10px;
}

/* Contenu du modal */
.modal-content {
	display: grid;
	grid-template-columns: 50% 50%;
	gap: 20px;
	max-width: 100%;
	padding: 30px;
}
.modal-content > div {
	border: solid 1px #ffffff;
	border-radius: 10px;
	padding: 20px;
}
.change-key {
	display: flex;
	flex-direction: row;
	padding-left: 5%;
	padding-right: 5%;
	justify-content: space-between;
	align-items: center;
}

.change-key > h4 {
	width: 15%;
}

#volume {
	display: flex;
	justify-content: center;
	width: 100%;
	margin-top: 10px;
}

h2 {
	margin-top: 0;
}

ion-icon {
	font-size: 1.4rem;
}

.text {
	border: solid 1px wheat;
	padding: 10px;
	border-radius: 10px;
}

.text:hover {
	cursor:context-menu;
	background-color: #ffffff;
	color: #212121;
	transition: all .3s ease-in-out;
}

.defaultButton {
	height: fit-content;
	width: fit-content;
}

/* Bouton de fermeture */
.close {
	color: #ffffff;
	float: right;
	font-size: 2.5rem;
	font-weight: bold;
}
.close:hover,
.close:focus {
	color: #ed1818;
	text-decoration: none;
	cursor: pointer;
}

.modal_sub-content_footer {
	margin-top: 20px;
	display: flex;
	align-items: center;
	justify-content: center;
}

.carousel {
	display: flex;
	justify-content: center;
	align-items: center;
	overflow: hidden;
}

.carousel-window {
	overflow: hidden;
	width: 40%;
	height: 75%;
}
  
.carousel-slide {
  	display: flex;
  	width: 100%;
  	height: 100%;
	overflow: unset;
}

.carousel-slide img {
  	width: 100%;
  	height: 100%;
  	object-fit: cover;
}

.prev,
.next {
	display: inline-block;
	padding: 8px 16px;
	background-color: #212121;
	color: #fff;
	border-radius: 4px;
	text-align: center;
	text-decoration: none;
	border: none;
	font-size: 30px;
	font-weight: bold;
	line-height: 24px;
	cursor: pointer;
	transition: background-color 0.3s ease;
}
  
/* Button hover state */
.prev:hover,
.next:hover {
	background-color: #424242;
}

::-webkit-scrollbar {
	width: 10px;
}

::-webkit-scrollbar-track {
	background: transparent;
}

::-webkit-scrollbar-thumb {
	background: rgba(0, 0, 0, 0.4);
	border-radius: 100vmax;
}
  
::-webkit-scrollbar-thumb:hover {
	background: rgba(0, 0, 0, 0.5);
}

.game-header {
	display: flex;
	justify-content: space-between;
	margin-bottom: 30px;
}
.game-header > div {
	display: flex;
	gap: 1rem;
}
.steps {
	font-size: 1.5rem;
	display: flex;
	align-items: center;
}

.steps > span {
	margin-left: 10px;
}

.footer {
	grid-column: span 2; 
	text-align: center;
}

.footer a {
	color: #ffffff;
}

.align-center {
	display: flex;
	justify-content: center;
	align-items: center;
	height: 80%;
}

